fixed the delaySpeed == Infinity issue. Also removed extra padding at bottom of train schedule table.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,3 +17,11 @@ body {
     font-weight: 700;
     color: darkgreen;
 }
+
+#remove-all-trains-button {
+    float: right;
+}
+
+.card-body {
+    padding-bottom: 0;
+}
